# chesu

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
apps/client/: components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/client/app/: root.tsx  tailwind.css
apps/client/app/adapters/: api.ts
apps/client/app/components/: board.tsx  header.tsx  new-match.tsx  newMatch.tsx  radio.tsx  topnav.tsx
apps/client/app/routes/: _index.tsx  board.tsx  game.$id.tsx  game.tsx  home.tsx  login.tsx
apps/client/app/utils/: createSession.ts  validationAction.ts
apps/client/schemas/: api.d.ts  api.json
apps/client/src/: index.css  main.tsx
apps/generator/: Cargo.toml
apps/generator/src/: main.rs
apps/server/: .example.env  Cargo.toml
apps/server/migrations/: 1_setup.sql  2_user.sql  3_game.sql  4_remove-not-null-white-player-constraint.down.sql  4_remove-not-null-white-player-constraint.up.sql  5_add-user-transactions.sql
apps/server/src/: app.rs  db.rs  lib.rs  main.rs  states.rs
apps/server/src/http/: auth.rs  client.rs  config.rs  docs.rs  error.rs  extractor.rs  game.rs  mod.rs  user.rs  wallet.rs
apps/server/src/models/: auth_user.rs  event.rs  game.rs  game_request.rs  mod.rs  rooms_manager.rs  user.rs
apps/server/src/models/rooms_manager/: mod.rs  tests.rs
apps/server/src/repositories/: game_repository.rs  mod.rs  user_repository.rs  wallet_repository.rs
apps/server/src/routes/: docs.rs  mod.rs
apps/server/src/routes/game/: create_game.rs  game_handler.rs  get_game.rs  join_game.rs  mod.rs  quick_pairing_game.rs
apps/server/src/routes/game/create_game/: mod.rs  service.rs
apps/server/src/routes/game/game_handler/: disconnect_service.rs  mod.rs  play_move_service.rs  service.rs  tests.rs
apps/server/src/routes/game/get_game/: mod.rs  service.rs
apps/server/src/routes/game/join_game/: mod.rs  service.rs
apps/server/src/routes/game/pairing_game/: mod.rs  service.rs
apps/server/src/routes/game/quick_pairing_game/: mod.rs  service.rs  tests.rs
apps/server/src/routes/user/: login.rs  logout.rs  me.rs  mod.rs  register.rs
apps/server/src/routes/user/login/: mod.rs  service.rs
apps/server/src/routes/user/me/: mod.rs
apps/server/src/routes/user/register/: mod.rs  service.rs
apps/server/src/routes/wallet/: check_invoice.rs  create_invoice.rs  deposit_webhook.rs  mod.rs  withdraw.rs
apps/server/src/routes/wallet/check_invoice/: mod.rs
apps/server/src/routes/wallet/create_invoice/: mod.rs
apps/server/src/routes/wallet/deposit_webhook/: mod.rs
apps/server/src/routes/wallet/withdraw/: mod.rs  service.rs
apps/server/src/services/: mod.rs  withdraw_service.rs
apps/server/src/services/game/: mod.rs  pairing_service.rs
apps/server/src/services/user/: me_service.rs  mod.rs  register_service.rs
scripts/: generate_schema.sh  mock_webhook.sh
(+28 files in other folders)
