[package]
name = "server"
version = "0.0.1"
resolver = "2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
argon2 = "0.5"
axum = { version = "0.7.4", features = ["tokio", "tracing", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie-private", "cookie-key-expansion"] }
axum-util = "0.2.2"
validator = { version = "0.17", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
thiserror = "1.0.30"
rand = "0.8.4"
tower = "0.4.11"
tower-http = { version = "0.5.0", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
    "cors"
] }
aide = { version = "0.13.4", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
] }
schemars = { version = "0.8.10", features = ["uuid1"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
lightning-invoice = "0.33.0"
mockall = "0.13.1"
shakmaty = "0.27.2"
